# getting-started

./: .gitmodules
Arm/MPS3_AN524/: CMakeLists.txt  readme.md
Arm/MPS3_AN524/app/: CMakeLists.txt  main.c
Arm/MPS3_AN524/app/startup/: mps3_an524.ld
Arm/MPS3_AN524/lib/tf-m/: CMakeLists.txt
Arm/MPS3_AN524/tools/: flash.py  rebuild.sh
cmake/: arm-gcc-cortex-m33.cmake
